Update about and skills content

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">web developer.</div>
-                <div class="intro-lead-in">Striving to solve problems and build awesome things</div>
+                <div class="intro-lead-in">Solving problems and building awesome things</div>
                 <a href="#skills" class="page-scroll btn btn-xl">Learn More</a>
             </div>
         </div>
@@ -85,18 +85,18 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-code fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Code</h4>
-                    <p class="text-muted">Whether it's coding up a solid landing page in HTML5/CSS3, or whether it's adding that extra spark with JavaScript and jQuery, I've got it covered.</p>
+                    <h4 class="service-heading">Front-End</h4>
+                    <p class="text-muted">Whether it's coding up a responsive landing page in HTML5, CSS3 and Bootstrap, or whether it's adding that extra spark with JavaScript and jQuery, I've got it covered.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">I take advantage of the brilliant Bootstrap framework to make sure that all of my projects are optimized to devices of all shapes and sizes.</p>
+                    <h4 class="service-heading">Back-End</h4>
+                    <p class="text-muted">I have experience working with NodeJS, ExpressJS and MongoDB to create a fast and robust Back-end experience. Version control with Git is also a must!</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -222,7 +222,7 @@
                 <div class="col-md-6">
                     <div class="about-text text-justify">
                         <h4 class="subheading"></h4>
-                        <p>Hi I'm Matt, an aspiring web developer from Brisbane, Australia. This year I am on a journey to learn about the fundamentals of web development. Right now this involves working through challenges and projects from the <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a> curriculum, as well as a tonne of extra online learning.</p>
+                        <p>Hi I'm Matt, an aspiring web developer from Brisbane, Australia. This year I am on a journey to learn about the fundamentals of web development. I have completed a Front-end Development Certification at <a href="http://www.freecodecamp.org/matt-dobie" target="_blank">freeCodeCamp</a>, which I enjoyed tremendously, and right now I am working through the Back-end curriculum.</p>
                         <p>Through this site I am so excited to share with you everything that I have been working on. I hope you find something interesting! Along with coding my main passions are for music and pop culture. </p>
                     </div>
                 </div>
