Update about section to full-stack dev

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="col-md-6">
                     <div class="about-text text-justify">
                         <h4 class="subheading"></h4>
-                        <p>Hi I'm Matt, an aspiring web developer from Brisbane, Australia. This year I am on a journey to learn about the fundamentals of web development. I have completed a Front-end Development Certification at <a href="http://www.freecodecamp.org/matt-dobie" target="_blank">freeCodeCamp</a>, which I enjoyed tremendously, and right now I am working through the Back-end curriculum.</p>
+                        <p>Hi I'm Matt, a full-stack web developer from Brisbane, Australia. A few years ago I completed a Bachelor of Science (Physics) at the University of Wollongong, but now I have transitioned into building responsive and user-friendly web apps. This year I have completed a Front-end Development Certification at <a href="http://www.freecodecamp.org/matt-dobie" target="_blank">freeCodeCamp</a>, which I enjoyed tremendously, and right now I am working through the Back-end curriculum.</p>
                         <p>Through this site I am so excited to share with you everything that I have been working on. I hope you find something interesting! Along with coding my main passions are for music and pop culture. </p>
                     </div>
                 </div>
