--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/nodeprojects500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/nodeprojects500x360.jpg" class="img-responsive" alt="NodeJS API Projects">
                     </a>
                     <div class="portfolio-caption">
                         <h4>NodeJS API Projects</h4>
@@ -142,7 +142,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/simon500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/simon500x360.jpg" class="img-responsive" alt="Game of Simon">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Simon Game</h4>
@@ -156,7 +156,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/tic-tac-toe500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/tic-tac-toe500x360.jpg" class="img-responsive" alt="Game of Tic-Tac-Toe">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Tic-Tac-Toe</h4>
@@ -170,7 +170,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/wikipediaviewer500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/wikipediaviewer500x360.jpg" class="img-responsive" alt="App to search and view Wikipedia articles">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Wikipedia Viewer</h4>
@@ -184,7 +184,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/weatherapp500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/weatherapp500x360.jpg" class="img-responsive" alt="Local Weather app">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Local Weather</h4>
@@ -198,7 +198,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/portfolio500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/portfolio500x360.jpg" class="img-responsive" alt="Screenshot of portfolio website">
                     </a>
                     <div class="portfolio-caption">
                         <h4>More Projects</h4>
@@ -227,7 +227,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/about/me.jpg" class="img-responsive center-block about-box" alt="me" style="border-radius: 50%">
+                    <img src="img/about/me.jpg" class="img-responsive center-block about-box" alt="Picture of me" style="border-radius: 50%">
                 </div>
             </div>
             <div class="row">
