Tidy up Wikipedia Viewer

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                                     <li><strong>OR</strong></li>
                                     <li>Read a random article</li>
                                 </ul>
-                                <p>This was achieved through a combination of CSS3 and jQuery for a responsive and animated design, and the MediaWiki API to pull the appropriate article information.</p>
+                                <p>This was achieved through a combination of CSS3 and jQuery for a responsive and animated design, and the MediaWiki API to pull the appropriate article information. The search bar design was heavily inspired by Vlad Georgescu at <a href="http://icanbecreative.com/article/css3-animated-search-box/" target="_blank">http://icanbecreative.com/article/css3-animated-search-box/</a></p>
                                 <ul class="list-inline">
                                     <li><strong>Date:</strong> June 2017</li>
                                     <li><strong>Category:</strong> Web Application</li>
